# lovr

./: CMakeLists.txt
etc/nogame/: main.lua
plugins/coord/: CMakeLists.txt  coord.c
src/: main.c
